Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64307

failed to compile qquickshape.obj on windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.11.0
    • 5.11
    • Quick: Other
    • None
    • Windows 10 (msvc2015-x86_64) - DeveloperBuild, Release, QtNamespace, QtLibInfix, BuildExamples, AbortTestingOnFirstFailure
      Windows 8.1 (msvc2013-x86_64) - DeveloperBuild, Release, DisableTests, AbortTestingOnFirstFailure
    • 6a02958f2155dc923bdefeb971d5df1b5030acc2

    Description

      https://codereview.qt-project.org/#/c/210313/
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1510088345
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/8b9d75e551cf6438757a5c1801289891dfe1927f/WindowsWindows_10x86_64WindowsWindows_10x86_64MSVC2015qtci-windows-10-x86_64-7-c98c36DeveloperBuild_Release_QtNamespace_QtLibInfix_BuildExamples/052bb60121fe9d6c2b1356b0477ac80084b48fbb/build_1510092289/log.txt.gz
      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/8b9d75e551cf6438757a5c1801289891dfe1927f/WindowsWindows_8_1x86_64WindowsWindows_8_1x86_64MSVC2013qtci-windows-8.1-x86_64-f204f5DeveloperBuild_Release_DisableTests/052bb60121fe9d6c2b1356b0477ac80084b48fbb/build_1510092276/log.txt.gz

      ...
      c:\Users\qt\work\install\include\QtGui\5.11.0\QtGui/private/qdrawhelper_p.h(1173) : error C2220: warning treated as error - no 'object' file generated
      c:\Users\qt\work\install\include\QtGui\5.11.0\QtGui/private/qdrawhelper_p.h(1173) : warning C4267: 'initializing' : conversion from 'size_t' to 'const uint', possible loss of data
      c:\Users\qt\work\install\include\QtGui\5.11.0\QtGui/private/qdrawhelper_p.h(1179) : warning C4267: 'initializing' : conversion from 'size_t' to 'const uint', possible loss of data
      jom: C:\Users\qt\work\qt\qtdeclarative\src\imports\shapes\Makefile.Release [.obj\release\qquickshape.obj] Error 2
      ...
      

      Attachments

        For Gerrit Dashboard: QTBUG-64307
        # Subject Branch Project Status CR V

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes