Fix narrowing warning on MSVC

Task-number: QTBUG-64307
Change-Id: I26032b71dc8fe316dddb8ce2adf6fd0a75ecf226
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>